prusti-tests/tests/parse/ui/unbalanced.stderr
error: unexpected closing delimiter: `]`
 --> $DIR/unbalanced.rs:3:18
  |
3 | #[requires(true))]
  |                  ^ unexpected closing delimiter

error: mismatched closing delimiter: `)`
 --> $DIR/unbalanced.rs:3:2
  |
3 | #[requires(true))]
  |  ^              ^ mismatched closing delimiter
  |  |
  |  unclosed delimiter

error: aborting due to 2 previous errors

